--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,7 @@ panic = "abort"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bootloader = "0.9.8"
+bootloader = "0.9.22"
+volatile ="=0.2.6"
+
+
