--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -23,7 +23,7 @@ jobs:
           source $HOME/.bashrc
       - name: Install nightly toolchain
         run: |
-          rustup install nightly-x86_64-unknown-linux-gnu 
+          rustup component add rust-src --toolchain nightly-x86_64-unknown-linux-gnu
       - name: Build
         run: cargo build --release
       - name: Run tests (optional)
