--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -24,6 +24,9 @@ jobs:
       - name: Install nightly toolchain
         run: |
           rustup toolchain install nightly
+      - name: Add rustfmt
+        run: |
+          rustup component add rustfmt --toolchain nightly
       - name: Build
         run: cargo build --release
       - name: Run tests (optional)
