--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,4 +1,4 @@
-name: Rust
+name: Code
 
 on:
   push:
@@ -7,6 +7,8 @@ on:
       - '!staging.tmp'
     tags:
       - '*'
+  schedule:
+    - cron: '40 3 * * *'   # every day at 3:40
   pull_request:
   workflow_dispatch:
 
