--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,15 +3,17 @@ name = "bareMetal_os"
 version = "0.1.0"
 edition = "2021"
 
-[profile.dev]
-panic = "abort"
-
-[profile.release]
-panic = "abort"
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 bootloader = "0.9.22"
 lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
 spin = "0.5.2"
 volatile ="=0.2.6"
+x86_64 = "0.14.2"
+uart_16550 = "0.2.0"
+
+[package.metadata.bootimage]
+test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "-none"]
+test-success-exit-code = 33
+test-timeout = 100
+
+
