--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ x86_64 = "0.14.2"
 uart_16550 = "0.2.0"
 
 [package.metadata.bootimage]
-test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "-none"]
+test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
 test-success-exit-code = 33
 test-timeout = 100
 
