--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,4 +16,6 @@ test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "st
 test-success-exit-code = 33
 test-timeout = 100
 
-
+[[test]]
+name = "should_panic"
+harness = false
