--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,5 +17,9 @@ test-success-exit-code = 33
 test-timeout = 100
 
 [[test]]
+name = "stack_overflow"
+harness = false
+
+[[test]]
 name = "should_panic"
 harness = false
