--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,8 @@ edition = "2021"
 bootloader = { version = "0.9.22", features = ["map_physical_memory"]}
 lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
 spin = "0.5.2"
-volatile ="=0.2.6"
-x86_64 = "0.14.2"
+volatile = "=0.2.6"
+x86_64 = "0.14.10"  # Updated this version
 uart_16550 = "0.2.0"
 pic8259 = "0.10.1"
 pc-keyboard = "0.5.0"
